# serializer version: 1
# name: test_sensors[sensor.dyad_pro_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.dyad_pro_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Battery',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Battery',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'battery_dyad_duid',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[sensor.dyad_pro_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'Dyad Pro Battery',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.dyad_pro_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_sensors[sensor.dyad_pro_error-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'none',
        'dirty_tank_full',
        'water_level_sensor_stuck',
        'clean_tank_empty',
        'clean_head_entangled',
        'clean_head_too_hot',
        'fan_protection_e5',
        'cleaning_head_blocked',
        'temperature_protection',
        'fan_protection_e4',
        'fan_protection_e9',
        'battery_temperature_protection_e0',
        'battery_temperature_protection',
        'battery_temperature_protection_2',
        'power_adapter_error',
        'dirty_charging_contacts',
        'low_battery',
        'battery_under_10',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.dyad_pro_error',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Error',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Error',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'a01_error',
    'unique_id': 'error_dyad_duid',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.dyad_pro_error-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Dyad Pro Error',
      'options': list([
        'none',
        'dirty_tank_full',
        'water_level_sensor_stuck',
        'clean_tank_empty',
        'clean_head_entangled',
        'clean_head_too_hot',
        'fan_protection_e5',
        'cleaning_head_blocked',
        'temperature_protection',
        'fan_protection_e4',
        'fan_protection_e9',
        'battery_temperature_protection_e0',
        'battery_temperature_protection',
        'battery_temperature_protection_2',
        'power_adapter_error',
        'dirty_charging_contacts',
        'low_battery',
        'battery_under_10',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.dyad_pro_error',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'none',
  })
# ---
# name: test_sensors[sensor.dyad_pro_filter_time_left-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.dyad_pro_filter_time_left',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Filter time left',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Filter time left',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filter_time_left',
    'unique_id': 'filter_time_left_dyad_duid',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[sensor.dyad_pro_filter_time_left-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Dyad Pro Filter time left',
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.dyad_pro_filter_time_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0308333333333333',
  })
# ---
# name: test_sensors[sensor.dyad_pro_roller_left-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.dyad_pro_roller_left',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Roller left',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Roller left',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'brush_remaining',
    'unique_id': 'brush_remaining_dyad_duid',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[sensor.dyad_pro_roller_left-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Dyad Pro Roller left',
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.dyad_pro_roller_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0616666666666667',
  })
# ---
# name: test_sensors[sensor.dyad_pro_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'unknown',
        'fetching',
        'fetch_failed',
        'updating',
        'washing',
        'ready',
        'charging',
        'mop_washing',
        'self_clean_cleaning',
        'self_clean_deep_cleaning',
        'self_clean_rinsing',
        'self_clean_dehydrating',
        'drying',
        'ventilating',
        'reserving',
        'mop_washing_paused',
        'dusting_mode',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.dyad_pro_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Status',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'a01_status',
    'unique_id': 'status_dyad_duid',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.dyad_pro_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Dyad Pro Status',
      'options': list([
        'unknown',
        'fetching',
        'fetch_failed',
        'updating',
        'washing',
        'ready',
        'charging',
        'mop_washing',
        'self_clean_cleaning',
        'self_clean_deep_cleaning',
        'self_clean_rinsing',
        'self_clean_dehydrating',
        'drying',
        'ventilating',
        'reserving',
        'mop_washing_paused',
        'dusting_mode',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.dyad_pro_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'drying',
  })
# ---
# name: test_sensors[sensor.dyad_pro_total_cleaning_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.dyad_pro_total_cleaning_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Total cleaning time',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Total cleaning time',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'total_cleaning_time',
    'unique_id': 'total_cleaning_time_dyad_duid',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[sensor.dyad_pro_total_cleaning_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Dyad Pro Total cleaning time',
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.dyad_pro_total_cleaning_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3.55',
  })
# ---
# name: test_sensors[sensor.roborock_q7_filter_time_left-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_q7_filter_time_left',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Filter time left',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Filter time left',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filter_time_left',
    'unique_id': 'filter_time_left_q7_duid',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[sensor.roborock_q7_filter_time_left-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Roborock Q7 Filter time left',
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_q7_filter_time_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '125.0',
  })
# ---
# name: test_sensors[sensor.roborock_q7_main_brush_time_left-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_q7_main_brush_time_left',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Main brush time left',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Main brush time left',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'main_brush_time_left',
    'unique_id': 'main_brush_time_left_q7_duid',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[sensor.roborock_q7_main_brush_time_left-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Roborock Q7 Main brush time left',
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_q7_main_brush_time_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '216.666666666667',
  })
# ---
# name: test_sensors[sensor.roborock_q7_mop_life_time_left-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_q7_mop_life_time_left',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mop life time left',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Mop life time left',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'mop_life_time_left',
    'unique_id': 'mop_life_time_left_q7_duid',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[sensor.roborock_q7_mop_life_time_left-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Roborock Q7 Mop life time left',
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_q7_mop_life_time_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '160.0',
  })
# ---
# name: test_sensors[sensor.roborock_q7_sensor_time_left-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_q7_sensor_time_left',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sensor time left',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Sensor time left',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sensor_time_left',
    'unique_id': 'sensor_time_left_q7_duid',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[sensor.roborock_q7_sensor_time_left-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Roborock Q7 Sensor time left',
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_q7_sensor_time_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '21.6666666666667',
  })
# ---
# name: test_sensors[sensor.roborock_q7_side_brush_time_left-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_q7_side_brush_time_left',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Side brush time left',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Side brush time left',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'side_brush_time_left',
    'unique_id': 'side_brush_time_left_q7_duid',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[sensor.roborock_q7_side_brush_time_left-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Roborock Q7 Side brush time left',
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_q7_side_brush_time_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '150.0',
  })
# ---
# name: test_sensors[sensor.roborock_q7_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'sleeping',
        'waiting_for_orders',
        'paused',
        'docking',
        'charging',
        'sweep_moping',
        'sweep_moping_2',
        'moping',
        'updating',
        'mop_cleaning',
        'mop_airdrying',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_q7_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Status',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'q7_status',
    'unique_id': 'q7_status_q7_duid',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.roborock_q7_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Roborock Q7 Status',
      'options': list([
        'sleeping',
        'waiting_for_orders',
        'paused',
        'docking',
        'charging',
        'sweep_moping',
        'sweep_moping_2',
        'moping',
        'updating',
        'mop_cleaning',
        'mop_airdrying',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_q7_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'sweep_moping',
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_2_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Battery',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Battery',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'battery_device_2',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'Roborock S7 2 Battery',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_2_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_cleaning_area-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_2_cleaning_area',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cleaning area',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Cleaning area',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cleaning_area',
    'unique_id': 'cleaning_area_device_2',
    'unit_of_measurement': <UnitOfArea.SQUARE_METERS: 'm²'>,
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_cleaning_area-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 2 Cleaning area',
      'unit_of_measurement': <UnitOfArea.SQUARE_METERS: 'm²'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_2_cleaning_area',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '21.0',
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_cleaning_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_2_cleaning_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cleaning time',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Cleaning time',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cleaning_time',
    'unique_id': 'cleaning_time_device_2',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_cleaning_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Roborock S7 2 Cleaning time',
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_2_cleaning_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '19.6',
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_current_room-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'Example room 1',
        'Example room 2',
        'Example room 3',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_2_current_room',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Current room',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Current room',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'current_room',
    'unique_id': 'current_room_device_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_current_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Roborock S7 2 Current room',
      'options': list([
        'Example room 1',
        'Example room 2',
        'Example room 3',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_2_current_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Example room 2',
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_dock_dock_error-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'ok',
        'duct_blockage',
        'water_empty',
        'waste_water_tank_full',
        'maintenance_brush_jammed',
        'dirty_tank_latch_open',
        'no_dustbin',
        'cleaning_tank_full_or_blocked',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_2_dock_dock_error',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dock error',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Dock error',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dock_error',
    'unique_id': 'dock_error_device_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_dock_dock_error-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Roborock S7 2 Dock Dock error',
      'options': list([
        'ok',
        'duct_blockage',
        'water_empty',
        'waste_water_tank_full',
        'maintenance_brush_jammed',
        'dirty_tank_latch_open',
        'no_dustbin',
        'cleaning_tank_full_or_blocked',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_2_dock_dock_error',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'ok',
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_dock_maintenance_brush_time_left-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_2_dock_maintenance_brush_time_left',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Maintenance brush time left',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Maintenance brush time left',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cleaning_brush_time_left',
    'unique_id': 'cleaning_brush_time_left_device_2',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_dock_maintenance_brush_time_left-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Roborock S7 2 Dock Maintenance brush time left',
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_2_dock_maintenance_brush_time_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '235',
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_dock_strainer_time_left-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_2_dock_strainer_time_left',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Strainer time left',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Strainer time left',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'strainer_time_left',
    'unique_id': 'strainer_time_left_device_2',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_dock_strainer_time_left-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Roborock S7 2 Dock Strainer time left',
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_2_dock_strainer_time_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '85',
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_filter_time_left-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_2_filter_time_left',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Filter time left',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Filter time left',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filter_time_left',
    'unique_id': 'filter_time_left_device_2',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_filter_time_left-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Roborock S7 2 Filter time left',
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_2_filter_time_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '129.338333333333',
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_last_clean_begin-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_2_last_clean_begin',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Last clean begin',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Last clean begin',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'last_clean_start',
    'unique_id': 'last_clean_start_device_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_last_clean_begin-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Roborock S7 2 Last clean begin',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_2_last_clean_begin',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2023-01-01T03:22:10+00:00',
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_last_clean_end-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_2_last_clean_end',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Last clean end',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Last clean end',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'last_clean_end',
    'unique_id': 'last_clean_end_device_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_last_clean_end-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Roborock S7 2 Last clean end',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_2_last_clean_end',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2023-01-01T03:43:58+00:00',
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_main_brush_time_left-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_2_main_brush_time_left',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Main brush time left',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Main brush time left',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'main_brush_time_left',
    'unique_id': 'main_brush_time_left_device_2',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_main_brush_time_left-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Roborock S7 2 Main brush time left',
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_2_main_brush_time_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '279.338333333333',
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_sensor_time_left-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_2_sensor_time_left',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sensor time left',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Sensor time left',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sensor_time_left',
    'unique_id': 'sensor_time_left_device_2',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_sensor_time_left-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Roborock S7 2 Sensor time left',
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_2_sensor_time_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '9.33833333333333',
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_side_brush_time_left-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_2_side_brush_time_left',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Side brush time left',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Side brush time left',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'side_brush_time_left',
    'unique_id': 'side_brush_time_left_device_2',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_side_brush_time_left-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Roborock S7 2 Side brush time left',
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_2_side_brush_time_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '179.338333333333',
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'unknown',
        'starting',
        'charger_disconnected',
        'idle',
        'remote_control_active',
        'cleaning',
        'returning_home',
        'manual_mode',
        'charging',
        'charging_problem',
        'paused',
        'spot_cleaning',
        'error',
        'shutting_down',
        'updating',
        'docking',
        'going_to_target',
        'zoned_cleaning',
        'segment_cleaning',
        'emptying_the_bin',
        'washing_the_mop',
        'washing_the_mop_2',
        'going_to_wash_the_mop',
        'in_call',
        'mapping',
        'egg_attack',
        'patrol',
        'attaching_the_mop',
        'detaching_the_mop',
        'charging_complete',
        'device_offline',
        'locked',
        'air_drying_stopping',
        'robot_status_mopping',
        'clean_mop_cleaning',
        'clean_mop_mopping',
        'segment_mopping',
        'segment_clean_mop_cleaning',
        'segment_clean_mop_mopping',
        'zoned_mopping',
        'zoned_clean_mop_cleaning',
        'zoned_clean_mop_mopping',
        'back_to_dock_washing_duster',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_2_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Status',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'status',
    'unique_id': 'status_device_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Roborock S7 2 Status',
      'options': list([
        'unknown',
        'starting',
        'charger_disconnected',
        'idle',
        'remote_control_active',
        'cleaning',
        'returning_home',
        'manual_mode',
        'charging',
        'charging_problem',
        'paused',
        'spot_cleaning',
        'error',
        'shutting_down',
        'updating',
        'docking',
        'going_to_target',
        'zoned_cleaning',
        'segment_cleaning',
        'emptying_the_bin',
        'washing_the_mop',
        'washing_the_mop_2',
        'going_to_wash_the_mop',
        'in_call',
        'mapping',
        'egg_attack',
        'patrol',
        'attaching_the_mop',
        'detaching_the_mop',
        'charging_complete',
        'device_offline',
        'locked',
        'air_drying_stopping',
        'robot_status_mopping',
        'clean_mop_cleaning',
        'clean_mop_mopping',
        'segment_mopping',
        'segment_clean_mop_cleaning',
        'segment_clean_mop_mopping',
        'zoned_mopping',
        'zoned_clean_mop_cleaning',
        'zoned_clean_mop_mopping',
        'back_to_dock_washing_duster',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_2_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'charging',
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_total_cleaning_area-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_2_total_cleaning_area',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Total cleaning area',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Total cleaning area',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'total_cleaning_area',
    'unique_id': 'total_cleaning_area_device_2',
    'unit_of_measurement': <UnitOfArea.SQUARE_METERS: 'm²'>,
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_total_cleaning_area-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 2 Total cleaning area',
      'unit_of_measurement': <UnitOfArea.SQUARE_METERS: 'm²'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_2_total_cleaning_area',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1159.2',
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_total_cleaning_count-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_2_total_cleaning_count',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Total cleaning count',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Total cleaning count',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'total_cleaning_count',
    'unique_id': 'total_cleaning_count_device_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_total_cleaning_count-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 2 Total cleaning count',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_2_total_cleaning_count',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '31',
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_total_cleaning_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_2_total_cleaning_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Total cleaning time',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Total cleaning time',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'total_cleaning_time',
    'unique_id': 'total_cleaning_time_device_2',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_total_cleaning_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Roborock S7 2 Total cleaning time',
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_2_total_cleaning_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.6616666666667',
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_vacuum_error-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'none',
        'lidar_blocked',
        'bumper_stuck',
        'wheels_suspended',
        'cliff_sensor_error',
        'main_brush_jammed',
        'side_brush_jammed',
        'wheels_jammed',
        'robot_trapped',
        'no_dustbin',
        'strainer_error',
        'compass_error',
        'low_battery',
        'charging_error',
        'battery_error',
        'wall_sensor_dirty',
        'robot_tilted',
        'side_brush_error',
        'fan_error',
        'dock',
        'optical_flow_sensor_dirt',
        'vertical_bumper_pressed',
        'dock_locator_error',
        'return_to_dock_fail',
        'nogo_zone_detected',
        'visual_sensor',
        'light_touch',
        'vibrarise_jammed',
        'robot_on_carpet',
        'filter_blocked',
        'invisible_wall_detected',
        'cannot_cross_carpet',
        'internal_error',
        'collect_dust_error_3',
        'collect_dust_error_4',
        'mopping_roller_1',
        'mopping_roller_error_2',
        'clear_water_box_hoare',
        'dirty_water_box_hoare',
        'sink_strainer_hoare',
        'clear_water_box_exception',
        'clear_brush_exception',
        'clear_brush_exception_2',
        'filter_screen_exception',
        'mopping_roller_2',
        'up_water_exception',
        'drain_water_exception',
        'temperature_protection',
        'clean_carousel_exception',
        'clean_carousel_water_full',
        'water_carriage_drop',
        'check_clean_carouse',
        'audio_error',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_2_vacuum_error',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Vacuum error',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Vacuum error',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'vacuum_error',
    'unique_id': 'vacuum_error_device_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.roborock_s7_2_vacuum_error-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Roborock S7 2 Vacuum error',
      'options': list([
        'none',
        'lidar_blocked',
        'bumper_stuck',
        'wheels_suspended',
        'cliff_sensor_error',
        'main_brush_jammed',
        'side_brush_jammed',
        'wheels_jammed',
        'robot_trapped',
        'no_dustbin',
        'strainer_error',
        'compass_error',
        'low_battery',
        'charging_error',
        'battery_error',
        'wall_sensor_dirty',
        'robot_tilted',
        'side_brush_error',
        'fan_error',
        'dock',
        'optical_flow_sensor_dirt',
        'vertical_bumper_pressed',
        'dock_locator_error',
        'return_to_dock_fail',
        'nogo_zone_detected',
        'visual_sensor',
        'light_touch',
        'vibrarise_jammed',
        'robot_on_carpet',
        'filter_blocked',
        'invisible_wall_detected',
        'cannot_cross_carpet',
        'internal_error',
        'collect_dust_error_3',
        'collect_dust_error_4',
        'mopping_roller_1',
        'mopping_roller_error_2',
        'clear_water_box_hoare',
        'dirty_water_box_hoare',
        'sink_strainer_hoare',
        'clear_water_box_exception',
        'clear_brush_exception',
        'clear_brush_exception_2',
        'filter_screen_exception',
        'mopping_roller_2',
        'up_water_exception',
        'drain_water_exception',
        'temperature_protection',
        'clean_carousel_exception',
        'clean_carousel_water_full',
        'water_carriage_drop',
        'check_clean_carouse',
        'audio_error',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_2_vacuum_error',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'none',
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_maxv_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Battery',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Battery',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'battery_abc123',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'Roborock S7 MaxV Battery',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_maxv_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_cleaning_area-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_maxv_cleaning_area',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cleaning area',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Cleaning area',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cleaning_area',
    'unique_id': 'cleaning_area_abc123',
    'unit_of_measurement': <UnitOfArea.SQUARE_METERS: 'm²'>,
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_cleaning_area-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 MaxV Cleaning area',
      'unit_of_measurement': <UnitOfArea.SQUARE_METERS: 'm²'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_maxv_cleaning_area',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '21.0',
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_cleaning_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_maxv_cleaning_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cleaning time',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Cleaning time',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cleaning_time',
    'unique_id': 'cleaning_time_abc123',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_cleaning_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Roborock S7 MaxV Cleaning time',
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_maxv_cleaning_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '19.6',
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_current_room-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'Example room 1',
        'Example room 2',
        'Example room 3',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_maxv_current_room',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Current room',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Current room',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'current_room',
    'unique_id': 'current_room_abc123',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_current_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Roborock S7 MaxV Current room',
      'options': list([
        'Example room 1',
        'Example room 2',
        'Example room 3',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_maxv_current_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Example room 2',
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_dock_dock_error-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'ok',
        'duct_blockage',
        'water_empty',
        'waste_water_tank_full',
        'maintenance_brush_jammed',
        'dirty_tank_latch_open',
        'no_dustbin',
        'cleaning_tank_full_or_blocked',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_maxv_dock_dock_error',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dock error',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Dock error',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dock_error',
    'unique_id': 'dock_error_abc123',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_dock_dock_error-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Roborock S7 MaxV Dock Dock error',
      'options': list([
        'ok',
        'duct_blockage',
        'water_empty',
        'waste_water_tank_full',
        'maintenance_brush_jammed',
        'dirty_tank_latch_open',
        'no_dustbin',
        'cleaning_tank_full_or_blocked',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_maxv_dock_dock_error',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'ok',
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_dock_maintenance_brush_time_left-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_maxv_dock_maintenance_brush_time_left',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Maintenance brush time left',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Maintenance brush time left',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cleaning_brush_time_left',
    'unique_id': 'cleaning_brush_time_left_abc123',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_dock_maintenance_brush_time_left-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Roborock S7 MaxV Dock Maintenance brush time left',
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_maxv_dock_maintenance_brush_time_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '235',
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_dock_strainer_time_left-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_maxv_dock_strainer_time_left',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Strainer time left',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Strainer time left',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'strainer_time_left',
    'unique_id': 'strainer_time_left_abc123',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_dock_strainer_time_left-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Roborock S7 MaxV Dock Strainer time left',
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_maxv_dock_strainer_time_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '85',
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_filter_time_left-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_maxv_filter_time_left',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Filter time left',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Filter time left',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filter_time_left',
    'unique_id': 'filter_time_left_abc123',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_filter_time_left-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Roborock S7 MaxV Filter time left',
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_maxv_filter_time_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '129.338333333333',
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_last_clean_begin-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_maxv_last_clean_begin',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Last clean begin',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Last clean begin',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'last_clean_start',
    'unique_id': 'last_clean_start_abc123',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_last_clean_begin-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Roborock S7 MaxV Last clean begin',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_maxv_last_clean_begin',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2023-01-01T03:22:10+00:00',
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_last_clean_end-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_maxv_last_clean_end',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Last clean end',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Last clean end',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'last_clean_end',
    'unique_id': 'last_clean_end_abc123',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_last_clean_end-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Roborock S7 MaxV Last clean end',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_maxv_last_clean_end',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2023-01-01T03:43:58+00:00',
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_main_brush_time_left-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_maxv_main_brush_time_left',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Main brush time left',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Main brush time left',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'main_brush_time_left',
    'unique_id': 'main_brush_time_left_abc123',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_main_brush_time_left-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Roborock S7 MaxV Main brush time left',
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_maxv_main_brush_time_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '279.338333333333',
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_sensor_time_left-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_maxv_sensor_time_left',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sensor time left',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Sensor time left',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sensor_time_left',
    'unique_id': 'sensor_time_left_abc123',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_sensor_time_left-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Roborock S7 MaxV Sensor time left',
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_maxv_sensor_time_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '9.33833333333333',
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_side_brush_time_left-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_maxv_side_brush_time_left',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Side brush time left',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Side brush time left',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'side_brush_time_left',
    'unique_id': 'side_brush_time_left_abc123',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_side_brush_time_left-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Roborock S7 MaxV Side brush time left',
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_maxv_side_brush_time_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '179.338333333333',
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'unknown',
        'starting',
        'charger_disconnected',
        'idle',
        'remote_control_active',
        'cleaning',
        'returning_home',
        'manual_mode',
        'charging',
        'charging_problem',
        'paused',
        'spot_cleaning',
        'error',
        'shutting_down',
        'updating',
        'docking',
        'going_to_target',
        'zoned_cleaning',
        'segment_cleaning',
        'emptying_the_bin',
        'washing_the_mop',
        'washing_the_mop_2',
        'going_to_wash_the_mop',
        'in_call',
        'mapping',
        'egg_attack',
        'patrol',
        'attaching_the_mop',
        'detaching_the_mop',
        'charging_complete',
        'device_offline',
        'locked',
        'air_drying_stopping',
        'robot_status_mopping',
        'clean_mop_cleaning',
        'clean_mop_mopping',
        'segment_mopping',
        'segment_clean_mop_cleaning',
        'segment_clean_mop_mopping',
        'zoned_mopping',
        'zoned_clean_mop_cleaning',
        'zoned_clean_mop_mopping',
        'back_to_dock_washing_duster',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_maxv_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Status',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'status',
    'unique_id': 'status_abc123',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Roborock S7 MaxV Status',
      'options': list([
        'unknown',
        'starting',
        'charger_disconnected',
        'idle',
        'remote_control_active',
        'cleaning',
        'returning_home',
        'manual_mode',
        'charging',
        'charging_problem',
        'paused',
        'spot_cleaning',
        'error',
        'shutting_down',
        'updating',
        'docking',
        'going_to_target',
        'zoned_cleaning',
        'segment_cleaning',
        'emptying_the_bin',
        'washing_the_mop',
        'washing_the_mop_2',
        'going_to_wash_the_mop',
        'in_call',
        'mapping',
        'egg_attack',
        'patrol',
        'attaching_the_mop',
        'detaching_the_mop',
        'charging_complete',
        'device_offline',
        'locked',
        'air_drying_stopping',
        'robot_status_mopping',
        'clean_mop_cleaning',
        'clean_mop_mopping',
        'segment_mopping',
        'segment_clean_mop_cleaning',
        'segment_clean_mop_mopping',
        'zoned_mopping',
        'zoned_clean_mop_cleaning',
        'zoned_clean_mop_mopping',
        'back_to_dock_washing_duster',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_maxv_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'charging',
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_total_cleaning_area-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_maxv_total_cleaning_area',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Total cleaning area',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Total cleaning area',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'total_cleaning_area',
    'unique_id': 'total_cleaning_area_abc123',
    'unit_of_measurement': <UnitOfArea.SQUARE_METERS: 'm²'>,
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_total_cleaning_area-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 MaxV Total cleaning area',
      'unit_of_measurement': <UnitOfArea.SQUARE_METERS: 'm²'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_maxv_total_cleaning_area',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1159.2',
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_total_cleaning_count-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_maxv_total_cleaning_count',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Total cleaning count',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Total cleaning count',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'total_cleaning_count',
    'unique_id': 'total_cleaning_count_abc123',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_total_cleaning_count-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 MaxV Total cleaning count',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_maxv_total_cleaning_count',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '31',
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_total_cleaning_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_maxv_total_cleaning_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Total cleaning time',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Total cleaning time',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'total_cleaning_time',
    'unique_id': 'total_cleaning_time_abc123',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_total_cleaning_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Roborock S7 MaxV Total cleaning time',
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_maxv_total_cleaning_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.6616666666667',
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_vacuum_error-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'none',
        'lidar_blocked',
        'bumper_stuck',
        'wheels_suspended',
        'cliff_sensor_error',
        'main_brush_jammed',
        'side_brush_jammed',
        'wheels_jammed',
        'robot_trapped',
        'no_dustbin',
        'strainer_error',
        'compass_error',
        'low_battery',
        'charging_error',
        'battery_error',
        'wall_sensor_dirty',
        'robot_tilted',
        'side_brush_error',
        'fan_error',
        'dock',
        'optical_flow_sensor_dirt',
        'vertical_bumper_pressed',
        'dock_locator_error',
        'return_to_dock_fail',
        'nogo_zone_detected',
        'visual_sensor',
        'light_touch',
        'vibrarise_jammed',
        'robot_on_carpet',
        'filter_blocked',
        'invisible_wall_detected',
        'cannot_cross_carpet',
        'internal_error',
        'collect_dust_error_3',
        'collect_dust_error_4',
        'mopping_roller_1',
        'mopping_roller_error_2',
        'clear_water_box_hoare',
        'dirty_water_box_hoare',
        'sink_strainer_hoare',
        'clear_water_box_exception',
        'clear_brush_exception',
        'clear_brush_exception_2',
        'filter_screen_exception',
        'mopping_roller_2',
        'up_water_exception',
        'drain_water_exception',
        'temperature_protection',
        'clean_carousel_exception',
        'clean_carousel_water_full',
        'water_carriage_drop',
        'check_clean_carouse',
        'audio_error',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.roborock_s7_maxv_vacuum_error',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Vacuum error',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Vacuum error',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'vacuum_error',
    'unique_id': 'vacuum_error_abc123',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.roborock_s7_maxv_vacuum_error-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Roborock S7 MaxV Vacuum error',
      'options': list([
        'none',
        'lidar_blocked',
        'bumper_stuck',
        'wheels_suspended',
        'cliff_sensor_error',
        'main_brush_jammed',
        'side_brush_jammed',
        'wheels_jammed',
        'robot_trapped',
        'no_dustbin',
        'strainer_error',
        'compass_error',
        'low_battery',
        'charging_error',
        'battery_error',
        'wall_sensor_dirty',
        'robot_tilted',
        'side_brush_error',
        'fan_error',
        'dock',
        'optical_flow_sensor_dirt',
        'vertical_bumper_pressed',
        'dock_locator_error',
        'return_to_dock_fail',
        'nogo_zone_detected',
        'visual_sensor',
        'light_touch',
        'vibrarise_jammed',
        'robot_on_carpet',
        'filter_blocked',
        'invisible_wall_detected',
        'cannot_cross_carpet',
        'internal_error',
        'collect_dust_error_3',
        'collect_dust_error_4',
        'mopping_roller_1',
        'mopping_roller_error_2',
        'clear_water_box_hoare',
        'dirty_water_box_hoare',
        'sink_strainer_hoare',
        'clear_water_box_exception',
        'clear_brush_exception',
        'clear_brush_exception_2',
        'filter_screen_exception',
        'mopping_roller_2',
        'up_water_exception',
        'drain_water_exception',
        'temperature_protection',
        'clean_carousel_exception',
        'clean_carousel_water_full',
        'water_carriage_drop',
        'check_clean_carouse',
        'audio_error',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.roborock_s7_maxv_vacuum_error',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'none',
  })
# ---
# name: test_sensors[sensor.zeo_one_countdown-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.zeo_one_countdown',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Countdown',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Countdown',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'countdown',
    'unique_id': 'countdown_zeo_duid',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_sensors[sensor.zeo_one_countdown-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Zeo One Countdown',
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zeo_one_countdown',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[sensor.zeo_one_error-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'none',
        'refill_error',
        'drain_error',
        'door_lock_error',
        'water_level_error',
        'inverter_error',
        'heating_error',
        'temperature_error',
        'communication_error',
        'drying_error',
        'drying_error_e_12',
        'drying_error_e_13',
        'drying_error_e_14',
        'drying_error_e_15',
        'drying_error_e_16',
        'drying_error_water_flow',
        'drying_error_restart',
        'spin_error',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.zeo_one_error',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Error',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Error',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'zeo_error',
    'unique_id': 'error_zeo_duid',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.zeo_one_error-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Zeo One Error',
      'options': list([
        'none',
        'refill_error',
        'drain_error',
        'door_lock_error',
        'water_level_error',
        'inverter_error',
        'heating_error',
        'temperature_error',
        'communication_error',
        'drying_error',
        'drying_error_e_12',
        'drying_error_e_13',
        'drying_error_e_14',
        'drying_error_e_15',
        'drying_error_e_16',
        'drying_error_water_flow',
        'drying_error_restart',
        'spin_error',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zeo_one_error',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'none',
  })
# ---
# name: test_sensors[sensor.zeo_one_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'standby',
        'weighing',
        'soaking',
        'washing',
        'rinsing',
        'spinning',
        'drying',
        'cooling',
        'under_delay_start',
        'done',
        'aftercare',
        'waiting_for_aftercare',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.zeo_one_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'State',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'State',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'zeo_state',
    'unique_id': 'state_zeo_duid',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.zeo_one_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Zeo One State',
      'options': list([
        'standby',
        'weighing',
        'soaking',
        'washing',
        'rinsing',
        'spinning',
        'drying',
        'cooling',
        'under_delay_start',
        'done',
        'aftercare',
        'waiting_for_aftercare',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zeo_one_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'drying',
  })
# ---
# name: test_sensors[sensor.zeo_one_washing_left-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.zeo_one_washing_left',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Washing left',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Washing left',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'washing_left',
    'unique_id': 'washing_left_zeo_duid',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_sensors[sensor.zeo_one_washing_left-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Zeo One Washing left',
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zeo_one_washing_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '253',
  })
# ---
